--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 zabbix-frontend-php:
-  image: dockerizedrupal/zabbix-frontend-php:0.1.0
+  image: dockerizedrupal/zabbix-frontend-php:0.1.1
   hostname: zabbix-frontend-php
   ports:
     - "80:80"
     - "443:443"
+  volumes_from:
+    - zabbix-frontend-php-data
   links:
     - zabbix-server
 zabbix-frontend-php-data:
-  image: dockerizedrupal/zabbix-frontend-php:0.1.0
+  image: dockerizedrupal/zabbix-frontend-php:0.1.1
   hostname: zabbix-frontend-php-data
   entrypoint: ["/bin/echo", "Data-only container for Zabbix Web Frontend."]
   volumes:
